Updates from Overleaf

--- a/LC_Avancement.tex
+++ b/LC_Avancement.tex
@@ -65,20 +65,21 @@ Code couleur pour les manips :\\
   \hline
   \textbf{Réactions de synthèse, sites electrophiles, nucléophiles, formalisme flèches courbes} & Montage à reflux & \textcolor{red}{\textbf{0\%}}  & 1ère SPCL \\
   \hline
+  \textbf{Stéréochimie de configuration}, p\pageref{LC_Stéréochimie} & Différencier 2 stéréoisomères & \textcolor{red}{Hydro-halogénation régiosélective}  & Terminale SPCL \\
   \hline
-  \textbf{Distillation et diagrammes binaires}, p\pageref{LC_Distillation} & Distillation & \textcolor{red}{\textbf{0\%}}  & Terminale SPCL \\
+  \textbf{Distillation et diagrammes binaires}, p\pageref{LC_Distillation} & Distillation & \textcolor{green}{Distillation eau-éthanol}  & Terminale SPCL \\
   \hline
-   \textbf{Techniques spectroscopiques} & Déterminer C d'après une courbe d'étallonnage & \textcolor{red}{\textbf{0\%}}  & Terminale SPCL \\
+   \textbf{Techniques spectroscopiques} & Déterminer C d'après une courbe d'étallonnage & \textcolor{green}{Dosage bleu brillant dans le curaçao}  & Terminale SPCL \\
   \hline
-  \textbf{Conductivité} & Titrage par précipitation & \textcolor{green}{\textbf{90\%}}  & Terminale SPCL, revoir plan pour caler les expériences\\
+  \textbf{Conductivité} & Titrage par précipitation & \textcolor{green}{Déterminer concentration Cl dans le sérum phy}  & Terminale SPCL, revoir plan pour caler les expériences\\
   \hline
-  \textbf{Solubilité} & Extraire sélectivement les ions d'un mélange & \textcolor{red}{\textbf{0\%}}  & Term générale - spécialité \\
+  \textbf{Solubilité} & Extraire sélectivement les ions d'un mélange & \textcolor{green}{Extraction sélective des ions fer dans une solution de nitrate de fer et de sulfate de cuivre (Mesplède p193)}  & Terminale SPCL \\
   \hline
-  \textbf{Oxydoréduction} & Titrage dont la réaction support est une oxydo-reduction & \textcolor{red}{\textbf{0\%}}  & Term générale - spécialité \\
+  \textbf{Oxydoréduction} & Titrage dont la réaction support est une oxydo-reduction & \textcolor{green}{Titrage des ions hypochlorite contenus dans le Dakin/eau de Javel}  & Terminale SPCL \\
   \hline
-  \textbf{Réactivité des dérivés d'acide} & Montage Dean-Stark & \textcolor{green}{Synthèse arôme de banane}  & Term générale - spécialité \\
+  \textbf{Réactivité des dérivés d'acide} & Montage Dean-Stark & \textcolor{green}{Synthèse arôme de banane}  & Terminale SPCL \\
   \hline
-  \textbf{Electrolyse, électrosynthèse} & Réaliser une électrolyse à anode soluble & \textcolor{red}{Elec à anode soluble}- Florence Porteu-de-Buchère - Dunod p190 & Term générale - spécialité \\
+  \textbf{Electrolyse, électrosynthèse} & Réaliser une électrolyse à anode soluble & \textcolor{red}{Elec à anode soluble}- Florence Porteu-de-Buchère - Dunod p190 & Terminale SPCL \\
   \hline
 \end{tabularx}
 \end{changemargin}
