--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -45,7 +45,7 @@
 \begin{center}
 \begin{tabularx}{\paperwidth-2cm}{| X | X | c | X |}
 \hline
-  \textbf{Ondes progressives, ondes stationnaires} & ?? Corde Melde ?? & \textcolor{red}{\textbf{0\%}} & Annales 2009 et 2007 \\
+  \textbf{Ondes progressives, ondes stationnaires} & \textcolor{red}{Corde Melde - étude câble coax} & \textcolor{orange}{\textbf{40\%}} & Faire partie onde progressive et onde stationnaire \\
   \hline
   \textbf{Ondes acoustiques} & ?? Mesure $c_{air}$ piézo ?? & \textcolor{red}{\textbf{0\%}} &  \\
   \hline
