--- a/LP_DiffractionFraunhofer/LP_DiffractionFraunhofer.tex
+++ b/LP_DiffractionFraunhofer/LP_DiffractionFraunhofer.tex
@@ -1,8 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% En-tête leçon
 \begin{headerBlock}
-  \chapter{Ondes progressives, ondes stationnaires.}
-  \label{LP_OndesProgressives} 
+  \chapter{Diffraction de Fraunhofer.}
+  \label{LP_DiffractionFraunhofer} 
 \end{headerBlock}
 
 
@@ -17,15 +17,7 @@
   \hline 
   Titre & Auteurs & Editeur (année) & ISBN \\
   \hline
-  Tout-en-un PC/PC* & M.-N. Sanz & Dunod & \\
-  \hline 
-   Poly Ondes (prépa ENS Lyon) & Ethienne Thibierge &  &    \\
-   \hline
-   \url{http://images.math.cnrs.fr/Spectre.html\#nh7} &  San Vu Ngoc & CNRS & \\
-  \hline 
-  Dictionnaire de physique & Richard Taillet & de Boeck & \\
-  \hline
-  Ondes &  & H-prépa & \\
+  Tout-en-un PC/PC* & M.-N. Sanz & Dunod (2022) & \\
   \hline
 \end{tabularx}
 \end{center}
@@ -36,28 +28,23 @@
 %%%% Plan
 \begin{reportBlock}{Plan détaillé}
 
-  \textbf{Niveau choisi pour la leçon :}
+  \textbf{Niveau choisi pour la leçon :} 
   \newline
   \textbf{Prérequis} : \begin{itemize}
       \item 
+      \item 
+      \item 
   \end{itemize}
-
-  \textbf{Déroulé détaillé de la leçon: }  
   
   \section*{Introduction}
 
-  \section{Propagation d'une onde}
+  \section{Conditions de diffraction}
+
+  \subsection{}   
   
-  \subsection{Définition et propriétés} 
-  Cf partie 1 agrégation 2004
+  \section{Filtrage spatial}
 
-  \subsection{Equation de d'Alembert}
-  
-  \section{Onde stationnaire}
-
-  \subsection{Corde de Melde}
-
-  \section{}
+  \subsection{}
 
 
 \end{reportBlock}
