--- a/LP_Gravitation/LP_Gravitation.tex
+++ b/LP_Gravitation/LP_Gravitation.tex
@@ -21,8 +21,10 @@ La physique par la pratique    & B. Portelli et J. Barthes   &  H\&K (2005) &   
     Mécanique, Fondements et applications & J.-Ph. Pérez   & Dunod (2014)   &      \\
   \hline 
   Physique tout-en-un 2ème année PC-PSI & M.-N. Sanz & Dunod (2004) & \\
-  Mécanique I & J-P Faroux et J. Renault & Dunod (1995) & \\
   \hline
+  Mécanique I & BFR & Dunod (1995) & \\
+  \hline
+  
 \end{tabularx}
 \end{center}
 
@@ -33,7 +35,7 @@ La physique par la pratique    & B. Portelli et J. Barthes   &  H\&K (2005) &   
 \begin{reportBlock}{Plan détaillé}
   \textbf{Niveau choisi pour la leçon :} CPGE 2ème année
   \newline
-  \textbf{Prérequis : }Mécanique newtonienne ; Equations de Maxwell en éléctrostatique ; Loi de l'hydrostatique ; Référentiels non galiléens ; Lois de Kepler
+  \textbf{Prérequis : }Mécanique newtonienne ; Equations de Maxwell en électrostatique ; Loi de l'hydrostatique ; Référentiels non galiléens ; Lois de Kepler
   \newline
   
   \textbf{Déroulé détaillé de la leçon: }   \newline
@@ -43,7 +45,7 @@ La physique par la pratique    & B. Portelli et J. Barthes   &  H\&K (2005) &   
 Introduction historique avec Aristote et Galilée et la chute des corps. Expérience de pensée de Galilée : tous les objets tombent à la même vitesse dans le vide. Enfin, Newton qui décrit les lois de la mécanique classique, en particulier de gravitation universelle.
 
 
-\section{Interaction gravitationnelle (1'03)}
+\section{Interaction gravitationnelle}
 
 \subsection{Force de gravitation}
 
@@ -56,7 +58,7 @@ Gravitation = interaction entre deux masses. Schéma avec deux masses. $\overrig
 Rappel force électrostatique $\overrightarrow{F}_e = \frac{q_1 q_2}{4\pi \epsilon_0 r_{12}^3} \overrightarrow{r_{12}}$.
 
 
-\subsection{Analogie avec le champ électrostatique (sur slide) (3'40)}
+\subsection{Analogie avec le champ électrostatique (sur slide)}
 
 Analogie entre :
 
@@ -69,7 +71,7 @@ Analogie entre :
 \item Potentiel électrique vs potentiel gravitationnel
 \end{itemize}
 
-\subsection{Champ gravitationnel d'une boule homogène (4'25)}
+\subsection{Champ gravitationnel d'une boule homogène}
 
 Schéma boule, coordonnées sphériques. Détermination des invariances et des plans de symétrie. Application du théorème de Gauss dans le cas $r\leq R$ pour le calcul du champ gravitationnel terrestre. Tracé du champ gravitationnel vs $r$. Discussion de la limite de l'analogie entre les interactions électrostatique et gravitationnelle.
 
