--- a/LP_OndesAcoustiques/LP_OndeAcoustique.tex
+++ b/LP_OndesAcoustiques/LP_OndeAcoustique.tex
@@ -1,8 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% En-tête leçon
 \begin{headerBlock}
-  \chapter{Rétroactions et oscillations.}
-  \label{LP_RetroactionOscillation} 
+  \chapter{Ondes acoustiques.}
+  \label{LP_OndeAcoustique} 
 \end{headerBlock}
 
 
@@ -17,13 +17,11 @@
   \hline 
   Titre & Auteurs & Editeur (année) & ISBN \\
   \hline
-  Electronique & Pérez & Dunod & \\
+  Tout-en-un PC/PC* & M.-N. Sanz & Dunod (2022) & \\
   \hline 
-  Tout-en-un PSI/PSI* & Cardini & Dunod &    \\
+   \url{http://www.etienne-thibierge.fr/agreg/ondes_poly_2015.pdf} & Ethienne Thibierge & 2015 &  \\
   \hline 
-  Physique Spé. PSI/PSI* & Olivier, More, Gié & Tec\&Doc & \\
-  \hline 
-  Cours & Jérémy Neveu & & \\
+  Ondes H-prépa & J-M Brébec & Hachette (2004) & \\
   \hline
 \end{tabularx}
 \end{center}
@@ -38,20 +36,22 @@
   \newline
   \textbf{Prérequis} : \begin{itemize}
       \item 
+      \item 
+      \item 
   \end{itemize}
-
-  \textbf{Déroulé détaillé de la leçon: }  
   
   \section*{Introduction}
 
-  \section{Rétroactions}
+  \section{}
 
-  \section{Oscillations}
-\subsection{Oscillateur à Pont de Wien}
-Prendre $R_1\sim 1k\Omega$ pour l'amplification et $R=1k\Omega$ dans le filtre. Mettre $t-t_0$ pour le fit et enregistrer les oscillations par clé USB directement sur l'oscillo. Fitter par 
-\begin{equation}
-    A\exp\left(-a\omega_0(t+t_0)\right)\times\sin\left(\sqrt{1-\alpha^2}\omega_0(t+t_0)\right)
-\end{equation}
+  \subsection{}   
+
+  \section{}
+
+  \subsection{}
+  
+  \section{}
+  
 
 
 \end{reportBlock}
