--- a/LP_PhenomenesTransport.tex
+++ b/LP_PhenomenesTransport.tex
@@ -33,7 +33,7 @@
   \newline
 
 \section*{Introduction}
-Les principes de la thermodynamique utilisent la notion de fonction d'état qui permettent de décrire les transformations entre deux états d'équilibre sans se soucier du chemin qu'emprunte le système au cours de cette transformation. On va ici lever l'hypothèse de l'équilibre thermodynamique et s'intéresser à des mécanismes de transports de quantité physiques comme la quantité de matière ou la température par exemple.\\
+Les principes de la thermodynamique utilisent la notion de fonction d'état qui permettent de décrire les transformations entre deux états d'équilibre sans se soucier du chemin qu'emprunte le système au cours de cette transformation. On va ici lever l'hypothèse de l'équilibre thermodynamique et on va s'intéresser à décrire le transport de quantité physiques comme la quantité de matière ou la température par exemple avant que le système atteigne macroscopiquement son équilibre ou qu'on lui impose des conditions aux limites.\\
 
 \textcolor{blue}{Manip qualitative :} Mettre une goutte de sirop coloré dans de l'eau.\\
 
