--- a/LP_PropagationGuidee.tex
+++ b/LP_PropagationGuidee.tex
@@ -32,7 +32,7 @@
 %%%% Plan
 \begin{reportBlock}{Plan détaillé}
 
-  \textbf{Niveau choisi pour la leçon :} Licence 3
+  \textbf{Niveau choisi pour la leçon :}
   \newline
   \textbf{Prérequis} : \begin{itemize}
       \item 
@@ -45,11 +45,11 @@
   \section{Propagation}
   \subsection{Champs couplés}
   \subsection{Impédance caractéristique}
-
+  Montrer ce qui se passe si $Z=+\infty$, $Z=0$ et $Z=Z_c$.
   
   \section{Ondes TEM dans un câble coaxial}
 
-  \subsection{Equation des télgraphistes}
+  \subsection{Equation des télégraphistes}
 
   \subsection{Rapport des ondes stationnaires (ROS)}
 
