--- a/main.tex
+++ b/main.tex
@@ -89,7 +89,7 @@
 \input{Transition_Physique.tex}
 \input{LP_avancement.tex}
 \newpage
-\input{LP_Gravitation.tex}
+\input{LP_Gravitation/LP_Gravitation.tex}
 \newpage
 \input{LP_LoideConservation}
 \newpage
@@ -113,11 +113,10 @@
 \newpage
 \input{LP_TraitementSignal/LP_TraitementSignal}
 \newpage
-\input{LP_OndeProgressive.tex}
+\input{LP_OndesProgressives/LP_OndeProgressive.tex}
 \newpage
-%\input{LP_OndeAcoustique.tex}
-%\newpage
-%
+\input{LP_OndesAcoustiques/LP_OndeAcoustique.tex}
+\newpage
 \input{LP_PropagationGuidee.tex}
 \newpage
 \input{LP_Microscospie.tex}
@@ -126,8 +125,8 @@
 \newpage
 \input{LP_DivisionAmplitude/LPO3_Division_Amplitude.tex}
 \newpage
-%\input{LP_DiffractionFraunhofer}
-%\newpage 
+\input{LP_DiffractionFraunhofer/LP_DiffractionFraunhofer}
+\newpage 
 \input{LP_DiffractionPeriodique/LP_DiffractionStructurePeriodique}
 \newpage 
 \input{LP_AbsorbtionEmission}
@@ -165,4 +164,7 @@
 \input{LC_BiomoleculesEnergie}
 \newpage
 \input{LC_GestionRisqueLabo}
+\newpage
+\input{LC_Stereochimie}
+\newpage
 \end{document}
