Updates from Overleaf

--- a/LC_Avancement.tex
+++ b/LC_Avancement.tex
@@ -93,11 +93,11 @@ Code couleur pour les manips :\\
   \hline 
   Titre de la leçon & Elément imposé & Expérience & Niveau \\
   \hline
-   \textbf{Energie chimique - exemple des combustions} & Estimer pouvoir calo d'une combustion & \textcolor{green}{Voir Nathan ST2S}  & 1ère/terminale STI2D \\
+  \textbf{Energie chimique - exemple des combustions} & Estimer pouvoir calo d'une combustion & \textcolor{green}{Voir Nathan ST2S}  & 1ère/terminale STI2D \\
   \hline
-   \textbf{Distillation et diagrammes binaires} & Distillation & \textcolor{yellow}{}  & 1ère/terminale STI2D \\
+  \textbf{Oxydoréduction} p\pageref{LC_Oxydoreduction_STI2D} & Déterminer la capacité d'un accumulateur & \textcolor{red}{Accumulateur au plomb}  & 1ère/terminale STI2D \\
    \hline  
-   \hline
+  \hline
   \textbf{Molécules d'intérêt biologique} & Différencier aldéhyde/cétone & \textcolor{green}{Voir Nathan ST2S} & 1ère ST2S \\
   \hline
   \textbf{Gestion des risques au laboratoire de chimie} p\pageref{LC_GestionRisquesLabo} & Mettre en \oe uvre un protocol de neutralisation & \textcolor{green}{Neutralisation acide} & 1ère ST2S \\
