--- a/LP_CinematiqueRelativiste.tex
+++ b/LP_CinematiqueRelativiste.tex
@@ -24,6 +24,8 @@
   \hline
   Mécanique 1 (Chap 1) & BFR & Dunod (1984) & \\
   \hline
+  \url{http://blog.ac-versailles.fr/profbcasanova/public/TS4_phychim/P8_muons-2014.pdf} & & & \\
+  \hline
 \end{tabularx}
 \end{center}
 
