--- a/LP_ConductionElec.tex
+++ b/LP_ConductionElec.tex
@@ -57,7 +57,7 @@ Voici ce que Drude prévoit en supposant que la vitesse des électrons obéit à
 Conclusion : il faut passer à un autre modèle plus poussé : un modèle quantique.
 
 \section{Modèle quantique des électrons libres}
-Electrons obéissent à la statistique de Fermi-Dirac. 
+Electrons obéissent à la statistique de Fermi-Dirac et non à la statistique de Maxwell-Boltzmann.
 \subsection{Modèle des électrons libres}
 Cf Kittel chap 8 ou Ashcroft chap 2 et 13. Modèle de Sommerfeld. Faire les calculs Justifier qu'on peut se placer à T=0K.
 
