--- a/LP_DiffractionFraunhofer/LP_DiffractionFraunhofer.tex
+++ b/LP_DiffractionFraunhofer/LP_DiffractionFraunhofer.tex
@@ -40,9 +40,23 @@
 
   \section{Conditions de diffraction}
 
-  \subsection{}   
+  \subsection{Théorème de Huygens-Fresnel} 
+  Enoncé, faire les dessins.
+  \subsection{Diffraction par une structure}
+  Voir TD Optique Pauline - Diffraction. Arriver à Fraunhofer vs Fresnel. 
+
+  \subsection{Conditions de Fraunhofer}
+  Bien distinguer les conditions + exemples
+  Parler de théorème de Van Citter-Zernike ? Peut être utile par la suite et ça fait transition.
+  \section{? Exemples de systèmes diffractants ?}
   
-  \section{Filtrage spatial}
+  \subsection{Diffraction par une fente d'Young}
+  \textcolor{blue}{Manip qualitative : caméra CCD, éclairement par une source à l'infini, image à l'infini }
+
+  \subsection{Diffraction par un trou d'Young}
+  Arriver à la formule
+  
+  \section{Application au filtrage spatial}
 
   \subsection{}
 
