--- a/LP_DiffractionPeriodique/LP_DiffractionStructurePeriodique.tex
+++ b/LP_DiffractionPeriodique/LP_DiffractionStructurePeriodique.tex
@@ -2,7 +2,7 @@
 %%%% En-tête leçon
 \begin{headerBlock}
   \chapter{Diffraction sur des structures périodiques}
-    \label{LP_StructurePeriodique}
+    \label{LP_DiffractionPeriodique}
 \end{headerBlock}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
