--- a/LP_EffetTunnel.tex
+++ b/LP_EffetTunnel.tex
@@ -14,7 +14,7 @@
   \hline 
   Titre & Auteurs & Editeur (année) & ISBN \\
   \hline
-  Polycopié & Jean Hare &  & \\
+  Reflexion totale frustrée & Polycopié de Jean Hare &  & \\
   \hline
   Tout-en-un PC/PC* & M.-N. Sanz & Dunod & \\
   \hline
@@ -32,7 +32,7 @@
   \textbf{Prérequis : }
   \begin{itemize}
       \item Postulats de la mécanique quantique
-      \item 
+      \item Particule dans un puit de potentiel harmonique
   \end{itemize}
 
 \section*{Introducion}
@@ -89,10 +89,12 @@ Cf Dunod p1252.
 
 \importantbox{Ne pas faire la résolution complète, ça prend beaucoup trop de temps et ce n'est pas intéressant}
 
-On trouve R et T, on verifie qu'on a bien R+T=1 (conservation de l'énergie).
+On trouve R et T, on verifie qu'on a bien R+T=1 (conservation de l'énergie). \\
+
+\textcolor{blue}{Manip qualitative : montrer logiciel colorado qu'il y a transmission.}
 
 \subsection{Approximation de la barrière épaisse}
-Trouver $\delta$, l'interpréter.
+Trouver $\delta$, l'interpréter. Garder l'analogie avec réflexion totale frustrée pour les questions.
 
 \section{Application à la radioactivité alpha}
 
@@ -102,7 +104,7 @@ Découverte de la radioactivité. Montrer carte de la stabilité des noyaux. Rad
 \textcolor{blue}{Expérience :} Code python simulant Gamow (cf Alexandre).
 
 \subsection{Loi de Geiger-Nutall}
-
+\textcolor{blue}{Manip quanti/quali : faire regression $log(T_{1/2}) = \frac{A}{\sqrt{E}}+B$ en utilisant un tableau de données préconstruit.}
 
 \section*{Conclusion}
 
