--- a/main.tex
+++ b/main.tex
@@ -129,9 +129,9 @@
 \newpage 
 \input{LP_DiffractionPeriodique/LP_DiffractionStructurePeriodique}
 \newpage 
-\input{LP_AbsorbtionEmission}
+\input{LP_AbsorptionEmission/LP_AbsorptionEmission.tex}
 \newpage
-\include{LP_Ferromagnetisme.tex}
+\include{LP_Ferromagnetisme/LP_Ferromagnetisme.tex}
 \newpage
 \include{LP_ConductionElec}
 \newpage
@@ -149,11 +149,17 @@
 \newpage
 \input{LC_Eau}
 \newpage
-\input{LC_Solubilite}
+\input{LC_SPCL/LC_Solubilite.tex}
 \newpage
-\input{LC_Diagramme_binaire.tex}
+\input{LC_SPCL/LC_Diagramme_binaire.tex}
 \newpage
-\input{LC_Conductimetrie/LC22_Conductimétrie.tex}
+\input{LC_SPCL/LC_Stereochimie.tex}
+\newpage
+\input{LC_SPCL/LC_Electrolyse_SPCL}
+\newpage
+\input{LC_SPCL/LC_Oxydoreduction_SPCL}
+\newpage
+\input{LC_SPCL/LC_Conductimetrie/LC22_Conductimétrie.tex}
 \newpage
 \input{LC_CinetiqueElectrochimique}
 \newpage
@@ -165,6 +171,5 @@
 \newpage
 \input{LC_GestionRisqueLabo}
 \newpage
-\input{LC_Stereochimie}
-\newpage
+\input{LC_STI2D/LC_Oxydroreduction}
 \end{document}
