--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -10,25 +10,25 @@
 \textbf{Gravitation} p\pageref{LP_Gravitation}  & Pendule simple : mesure de g & \textcolor{yellow}{\textbf{60\%}}  & Reprendre les transitions, partie marées à modifier, rajouter exemples effets de marée dans le système solaire   \\
   \hline 
   \hline
-     \textbf{Lois de conservation en mécanique} p\pageref{LP_LoisConservation} & Conservation de $\mathbf{p}$ mobiles autoporteurs  &  \textcolor{yellow}{\textbf{20\%}}  & Exemple : leçon Basile + agrégat \\
+     \textbf{Lois de conservation en mécanique} p\pageref{LP_LoisConservation} & Conservation de $\mathbf{p}$ mobiles autoporteurs  &  \textcolor{yellow}{\textbf{20\%}}  & Faire manip + plan détaillé \\
   \hline 
-    \textbf{Notions de viscosité d'un fluide. \'{E}coulements visqueux} p\pageref{LP_Viscosite} &  & \textcolor{red}{\textbf{0\%}} &  Exemple : agrégat + diapo Hervé   \\
+    \textbf{Notions de viscosité d'un fluide. \'{E}coulements visqueux} p\pageref{LP_Viscosite} &  & \textcolor{red}{\textbf{0\%}} & Plan trop ambitieux, faire démo loi de Stokes dans partie dynamique + faire manip \\
   \hline 
   \textbf{Modèle de l'écoulement parfait d'un fluide} p\pageref{LP_EcoulementParfait} & Mesure $\rho_{air}$ sonde Pitot + anémomètre & \textcolor{red}{\textbf{0\%}} & Manip à faire \\
   \hline
   \textbf{Phénomènes interfaciaux impliquant des fluides} p\pageref{LP_PhenomenesInterfaciaux} & Loi de Jurin - loi de Laplace - expériences quali bulles savon & \textcolor{yellow}{\textbf{60\%}} & Plan leçon Lydia super, à s'approprier\\
   \hline 
   \hline
-  \textbf{Premier principe de la thermodynamique} p\pageref{LP_PremierPrincipe} & Mesure $c_{fer}$ dans calorimètre - Expérience Joule (cf Thibaut) & \textcolor{orange}{\textbf{50\%}} & Leçon Lydia a bien marché \\
+  \textbf{Premier principe de la thermodynamique} p\pageref{LP_PremierPrincipe} & \textcolor{orange}{Mesure $c_{fer}$ dans calorimètre} - \textcolor{red}{Expérience Joule} & \textcolor{orange}{\textbf{50\%}} & Leçon Lydia a bien marché \\
   \hline 
-  \textbf{Transitions de phase} p\pageref{LP_TransitionPhase} & Mesure chaleur latente de l'eau/azote & \textcolor{red}{\textbf{20\%}} & \\
+  \textbf{Transitions de phase} p\pageref{LP_TransitionPhase} & \textcolor{red}{Mesure chaleur latente de l'eau/azote} & \textcolor{red}{\textbf{20\%}} & \\
   \hline 
   \textbf{Phénomènes de transport} p\pageref{LP_Transport} & Diffusion du glycérol dans l'eau (TP fluide et capillarité) & \textcolor{green}{\textbf{80\%}} & à répéter\\
   \hline 
   \hline
-  \textbf{Conversion de puissance électromécanique} p\pageref{LP_ConversionPuissance} & Etude MCC (résistance, rendement, ...) & \textcolor{red}{\textbf{0\%}} & Leçon Basile\\
+  \textbf{Conversion de puissance électromécanique} p\pageref{LP_ConversionPuissance} & Etude MCC (résistance, rendement, ...) & \textcolor{yellow}{\textbf{60\%}} & Finir moteur synchrone\\
   \hline 
-  \textbf{Induction électromagnétique} & Mesure inductance circuit LC + aimant & \textcolor{red}{\textbf{0\%}} & Leçon Lydia assez complet\\
+  \textbf{Induction électromagnétique} p\pageref{LP_Induction} & Mesure inductance circuit LC + aimant & \textcolor{red}{\textbf{0\%}} & Leçon Lydia assez complet\\
   \hline
   \textbf{Rétroaction et oscillations} p\pageref{LP_RetroactionOscillation} & Quali : moteur asservi. Quanti : Pont de Wien & \textcolor{red}{\textbf{0\%}} & \\
   \hline
@@ -45,37 +45,37 @@
 \begin{center}
 \begin{tabularx}{\paperwidth-2cm}{| X | X | c | X |}
 \hline
-  \textbf{Ondes progressives, ondes stationnaires} & \textcolor{red}{Corde Melde - étude câble coax} & \textcolor{orange}{\textbf{40\%}} & Faire partie onde progressive et onde stationnaire \\
+  \textbf{Ondes progressives, ondes stationnaires} p\pageref{LP_OndesProgressives}~& \textcolor{red}{Corde Melde - étude câble coax} & \textcolor{orange}{\textbf{40\%}} & Faire partie onde progressive et onde stationnaire \\
   \hline
-  \textbf{Ondes acoustiques} & ?? Mesure $c_{air}$ piézo ?? & \textcolor{red}{\textbf{0\%}} &  \\
+  \textbf{Ondes acoustiques} p\pageref{LP_OndeAcoustique}~& ?? Mesure $c_{air}$ piézo ?? & \textcolor{red}{\textbf{0\%}} &  \\
   \hline
-  \textbf{Propagation guidée des ondes} & ?? Quali : piézo avec tube  ?? & \textcolor{red}{\textbf{0\%}} & \\
+  \textbf{Propagation guidée des ondes} p\pageref{LP_PropagationGuidee} & \textcolor{green}{Quali : piezo + tube}, \textcolor{red}{Quanti : guide d'onde centi}& \textcolor{red}{\textbf{0\%}} & \\
   \hline
-  \textbf{Microscopies optiques} & & \textcolor{red}{\textbf{0\%}} &  \\
+  \textbf{Microscopies optiques} p\pageref{LP_Microscopie}~& \textcolor{yellow}{Microscope maison, mesure grandissement}~& \textcolor{red}{\textbf{0\%}} &  \\
   \hline
-  \textbf{Interférences à deux ondes en optique} & Mesure largeur fentes d'Young & \textcolor{orange}{\textbf{50\%}} & Manip leçon Lydia à améliorer, compléter sa leçon \\
+  \textbf{Interférences à deux ondes en optique} p\pageref{LP_InterferencesDeuxOndes}~& Mesure largeur fentes d'Young & \textcolor{orange}{\textbf{40\%}} & Plan à revoir en détail\\
   \hline
   \textbf{Interférométrie à division d'amplitude} p\pageref{LP_DivisionAmplitude} & Michelson : doublet sodium & \textcolor{green}{\textbf{100\%}} & A revoir vite fait coin d'air \\
   \hline
-  \textbf{Diffraction de Fraunhofer} & Diffraction par une fente+CCD/Filtrage spatial & \textcolor{red}{\textbf{0\%}} &  \\
+  \textbf{Diffraction de Fraunhofer} p\pageref{LP_DiffractionFraunhofer} & \textcolor{red}{Diffraction par une fente+CCD/Filtrage spatial }& \textcolor{orange}{\textbf{30\%}} &  \\
   \hline
-  \textbf{Diffraction par des structures périodiques} &  & \textcolor{red}{\textbf{0\%}} &  \\
+  \textbf{Diffraction par des structures périodiques} p\pageref{LP_DiffractionPeriodique} & \textcolor{red}{Diffraction par un réseau} & \textcolor{red}{\textbf{0\%}} &  \\
   \hline
-  \textbf{Absorption et émission de la lumière} &  & \textcolor{red}{\textbf{0\%}} & Leçon Elric pas mal \\
+  \textbf{Absorption et émission de la lumière} p\pageref{LP_Absorption} & \textcolor{yellow}{Corps noir ?} & \textcolor{red}{\textbf{0\%}} & Leçon Elric pas mal \\
   \hline
   \hline
   \textbf{Propriétés macroscopiques des corps ferromagnétiques } p\pageref{LP_Ferromagnetisme} & Cycle hystérésis transfo & \textcolor{green}{\textbf{90\%}} & Mettre en relief appli ferro durs/doux + démo confinement lignes de champ slides \\
   \hline
-  \textbf{Mécanismes de la conduction électrique dans les solides} p\pageref{LP_Conduction} & Mesure gap germanium (cf TP semi) & \textcolor{yellow}{\textbf{50\%}} & Trasitions délicates, revoir partie 1, manip à la fin pas top \\
+  \textbf{Mécanismes de la conduction électrique dans les solides} p\pageref{LP_Conduction} & \textcolor{red}{Mesure conductivité cuivre vs T} & \textcolor{yellow}{\textbf{50\%}} & Transitions délicates, revoir partie 1 \\
   \hline
   \textbf{Phénomènes de résonance dans différents domaines de la physique} p\pageref{LP_resonance} & Détermination couplage mutuel circuits RLC couplés & \textcolor{yellow}{\textbf{40\%}} & Plan à détailler  \\
   \hline
-  \textbf{Oscillateurs ; portraits de phase et non-linéarités} & quanti : Pendule Borda, quali : portait de phase & \textcolor{red}{\textbf{0\%}} & Leçon Basile pour ref  \\
+  \textbf{Oscillateurs ; portraits de phase et non-linéarités} p\pageref{LP_PortaitPhase}~& quanti : Pendule Borda, quali : portait de phase & \textcolor{red}{\textbf{0\%}} & Leçon Basile pour ref  \\
   \hline
   \hline
   \textbf{Cinématique relativiste. Expérience de Michelson et Morley} p\pageref{LP_CinematiqueRelativiste} & logiciel Gum\_MC, exp Frish et Smith & \textcolor{yellow}{\textbf{20\%}} & Plan ok, manip à bosser  \\
   \hline
-  \textbf{Effet tunnel : application à la radioactivité alpha} & simulation Alexandre & \textcolor{yellow}{\textbf{40\%}} & Partie 1 :ne pas faire le calcul, interprétation physique courant, voir discussion avec Karim  \\
+  \textbf{Effet tunnel : application à la radioactivité alpha} & \textcolor{green}{Simulation site colorado}& \textcolor{green}{\textbf{80\%}} & Faire tableau avec $T_{1/2}$ et E. Interprétation $T_{1/2}$ avec particule à travailler. \\
   \hline
 \end{tabularx}
 \end{center}
