Updates from Overleaf

--- a/Leçon_chimie/LC_SPCL/LC_Conductimetrie/LC22_Conductimétrie.tex
+++ b/Leçon_chimie/LC_SPCL/LC_Conductimetrie/LC22_Conductimétrie.tex
@@ -127,7 +127,7 @@ Tableau de réaction qualitatif. Avant l'équivalence : \ce{Na^+} reste constant
 
   %\begin{figure}[!htbp]
   \begin{center}
-   \includegraphics[scale=0.5]{LC_SPCL/LC_Conductimetrie/Schema_titrage.png}
+   \includegraphics[scale=0.5]{Leçon_chimie/LC_SPCL/LC_Conductimetrie/Schema_titrage.png}
   \end{center}
  
   %\caption{\label{fig:localisation}Schéma de principe du titrage conductimétrique. Le solution titrante est une solution de $AgCl$ à $0.2 mol/L$. La solution titrée est du sérum physiologique.}
