--- a/main.tex
+++ b/main.tex
@@ -145,31 +145,31 @@
 \newpage
 \input{Transition_Chimie.tex}
 \newpage
-\input{LC_Avancement}
+\input{Leçon_chimie/LC_Avancement.tex}
 \newpage
-\input{LC_Eau}
+\input{Leçon_chimie/LC_Eau.tex}
 \newpage
-\input{LC_SPCL/LC_Solubilite.tex}
+\input{Leçon_chimie/LC_SPCL/LC_Solubilite.tex}
 \newpage
-\input{LC_SPCL/LC_Diagramme_binaire.tex}
+\input{Leçon_chimie/LC_SPCL/LC_Diagramme_binaire.tex}
 \newpage
-\input{LC_SPCL/LC_Stereochimie.tex}
+\input{Leçon_chimie/LC_SPCL/LC_Stereochimie.tex}
 \newpage
-\input{LC_SPCL/LC_Electrolyse_SPCL}
+\input{Leçon_chimie/LC_SPCL/LC_Electrolyse_SPCL.tex}
 \newpage
-\input{LC_SPCL/LC_Oxydoreduction_SPCL}
+\input{Leçon_chimie/LC_SPCL/LC_Oxydoreduction_SPCL.tex}
 \newpage
-\input{LC_SPCL/LC_Conductimetrie/LC22_Conductimétrie.tex}
+\input{Leçon_chimie/LC_SPCL/LC_Conductimetrie/LC22_Conductimétrie.tex}
 \newpage
-\input{LC_CinetiqueElectrochimique}
+\input{Leçon_chimie/LC_CinetiqueElectrochimique}
 \newpage
-\input{LC_DiagrammeEpH.tex}
+\input{Leçon_chimie/LC_DiagrammeEpH.tex}
 \newpage
-\input{LC_SyntheseTraitement}
+\input{Leçon_chimie/LC_SyntheseTraitement}
 \newpage
-\input{LC_BiomoleculesEnergie}
+\input{Leçon_chimie/LC_BiomoleculesEnergie.tex}
 \newpage
-\input{LC_GestionRisqueLabo}
+\input{Leçon_chimie/LC_GestionRisqueLabo.tex}
 \newpage
-\input{LC_STI2D/LC_Oxydroreduction}
+\input{Leçon_chimie/LC_STI2D/LC_Oxydroreduction.tex}
 \end{document}
